# seccomp

./: .gitignore  README.md  Setup.hs  seccomp.cabal
src/: Lib.hs  Main.hs
test/: doctests.hs
