name:                seccomp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/seccomp#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Web
build-type:          Custom
cabal-version:       >=1.24
extra-source-files:  README.md

custom-setup
  setup-depends:       base
                     , Cabal
                     , cabal-doctest >= 1.0.1 && < 1.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , vector
                     , vector-algorithms

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             test/doctests.hs
  build-depends:       base
                     , doctest >= 0.11.1 && < 0.12
                     , QuickCheck
                     , primes
                     , template-haskell
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
