name:                seccomp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/seccomp#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Web
build-type:          Simple
cabal-version:       >=1.24
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , integer-gmp
                     , vector
                     , vector-algorithms

executable seccomp
  main-is:             src/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , seccomp
